Classes de domínio atualizadas.