@@ -1,7 +1,7 @@
 package api.domains;
 
 import io.swagger.v3.oas.annotations.Hidden;
-import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotBlank;
 import lombok.*;
 import org.springframework.context.annotation.Profile;
 import org.springframework.data.annotation.Id;
@@ -13,7 +13,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Data
 @With
@@ -22,25 +21,35 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 @Profile("prod")
 @Table("Profanator_User")
+@EqualsAndHashCode(onlyExplicitlyIncluded = true)
 public class User implements UserDetails {
 
     @Id
+    @EqualsAndHashCode.Include
     private Long id;
-    @NotEmpty(message = "The 'username' cannot be empty or null")
+
+    @NotBlank(message = "The 'username' cannot be empty or null")
+    @EqualsAndHashCode.Include
     private String username;
-    @NotEmpty(message = "The 'password' cannot be empty or null")
+
+    @NotBlank(message = "The 'password' cannot be empty or null")
     private String password;
-    @NotEmpty(message = "The 'authorities' cannot be empty or null")
+
+    @NotBlank(message = "The 'authorities' cannot be empty or null")
     private String authorities;
+
     @Builder.Default
     @Column("accountNonLocked")
     private boolean accountNonLocked = true;
+
     @Builder.Default
     @Column("accountNonExpired")
     private boolean accountNonExpired = true;
+
     @Builder.Default
     @Column("credentialsNonExpired")
     private boolean credentialsNonExpired = true;
+
     @Builder.Default
     @Column("enabled")
     private boolean enabled = true;
@@ -50,7 +59,7 @@ public class User implements UserDetails {
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return Arrays.stream(authorities.split(","))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
